--- a/views/userdashboard.handlebars
+++ b/views/userdashboard.handlebars
@@ -4,36 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/e6cf7acf81.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="/css/userregistration.css">
+    <link rel="stylesheet" type="text/css" href="/css/userdashboard.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{title}}</title>
-    <form action="/sendMessage" method="POST">
-      <div class="container">
-          <h1>Sign Up</h1>
-          <hr>
-           <h2>Name</h2>
-          {{!-- <input type="text" placeholder="Enter Name" name="FirstName" id="o_FirstName"> --}}
-          <p id="o_FirstName"> Name </p>
-          <h2>Address</h2>
-          <input type="text" placeholder="Enter Address" name="Address" id="o_Address">
-            
-          <h2>Postal Code</h2>   
-          <input type="text" placeholder="Enter Postal Code" name="PostalCode" id="o_PostalCode">
-
-          <h2>Phone Number </h2> 
-          <input type="text" placeholder="Enter Phone Number" name="phoneNo" id="o_phoneNo">
-
-          <h2>City</h2> 
-          <input type="text" placeholder="Enter City" name="City" id="o_City">
-
-          <h2>State</h2>
-          <input type="text" placeholder="Enter State" name="State" id="o_State">
-
-          <h2>Email</h2>
-          <input type="text" placeholder="Enter Email" name="email" id="o_email">
-    <div>
-
-  </form>
+  <body>
+      <h1>Arifa Khan</h1>
+    <section>
+      <img src="../img/girl dashboard.jpg" alt="dashboard" class="profilephoto">
+      <a href="#" class="profile">Edit Profile</a>
+      <h4>Location : - <span>Toronto,ON</span></h4>
+      <h4>Languages : - <span>English,French</span></h4>
+      <h4>Email : - <span>Arifakhan@yahoo.com</span></h4>
+      <h4>Phone Number : - <span>456-098-7656</span></h4>
+      <h4>Birth date : - <span>12-08-1996</span></h4>
+   </section>
+      <h5> Your Places</h5>   
+      <section class="Places">
+        <div>
+          <h2>Dubai</h2>
+          <img src="img/dubai.jpg" alt="dubai">
+        </div>
+         <div>
+          <h2>Singapore</h2>
+          <img src="img/singapore.jpg" alt="singapore">      
+        </div>
+         <div>
+          <h2>Alberta</h2>
+          <img src="img/alberta.jpg" alt="Alberta">
+        </div>
+      </section>
+      <h1> Thank You for Choosing AIRBNB</h1>
   
 </body>
 </html>
