--- a/views/userdashboard.handlebars
+++ b/views/userdashboard.handlebars
@@ -9,14 +9,18 @@
     <title>{{title}}</title>
   <body>
       <h1>Arifa Khan</h1>
-    <section>
+    <section class="profile-dashboard">
+    <div>
       <img src="../img/girl dashboard.jpg" alt="dashboard" class="profilephoto">
       <a href="#" class="profile">Edit Profile</a>
+    </div>
+    <div>
       <h4>Location : - <span>Toronto,ON</span></h4>
       <h4>Languages : - <span>English,French</span></h4>
       <h4>Email : - <span>Arifakhan@yahoo.com</span></h4>
       <h4>Phone Number : - <span>456-098-7656</span></h4>
       <h4>Birth date : - <span>12-08-1996</span></h4>
+    </div>
    </section>
       <h5> Your Places</h5>   
       <section class="Places">
