--- a/static/css/userdashboard.css
+++ b/static/css/userdashboard.css
@@ -19,11 +19,9 @@ h2{
     text-align: center;
     font-size: larger;
 }
-h3,h4{
-    text-align: center;
-}
-h3{
-    color: darkblue;
+h4{
+    text-align:left;
+    margin-top: 0.5rem;
 }
 h5{
     font-size: 2rem;
@@ -31,17 +29,24 @@ h5{
     text-shadow: 2px 2px burlywood;
 }
 .profilephoto{
-    height: 10rem;
-    width: 20rem;
+    height: 8rem;
+    width: 12rem;
 }
 .Places{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 }
+.profile-dashboard{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 0%;
+}
 .profile{
     display: block;
     text-align: center;
     color: blue;
+    padding: 0.5rem;
+    text-shadow: 2px 2px burlywood;
 }
 @media screen and (min-width: 800px) and  (max-width:1800px) {
     i{
@@ -86,5 +91,13 @@ h5{
     }
     h1{
         font-size: 1rem;
+    }
+    .profile-dashboard{
+        display: grid;
+        grid-template-columns: 1fr;
+        padding: 0%;
+    }
+    h4{
+        text-align: center;
     }
  }
