--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -42,17 +42,17 @@
     </section>
     <section class="Information">
         <div>
-            <h1>Why host on Airbnb?</h1>
+            <h1 class="title">Why host on Airbnb?</h1>
             <p class="bio">No matter what kind of home or room you have to share, Airbnb makes it simple and secure to host travellers. You’re in full control of your availability, prices, house rules, and how you interact with guests.If you really know want to know what an Airbnb is like, then to be honest, it’s hard to say because they’re all different! I’ve stayed at so many different types of Airbnbs ranging from a modern home in a village overlooking Cinque Terre to large, airy apartments to fit a group of friends.</p>
         </div>
         <div>
-            <h1>Airbnb protects hosts</h1>
+            <h1 class="title">Airbnb protects hosts</h1>
             <p class="bio">To keep you, your home, and your belongings safe, we cover every booking with $1M USD in property damage protection and another $1M USD in insurance against accidents.First off, to make things easy, Airbnb sorts out their top hosts by calling them “super hosts”. Super hosts are generally very helpful and their places are clean and comfortable. Over time, many people have given them such good reviews that they earn this title of “super host”. You can filter out your settings when searching for a place to look at “super host” only accommodations. Look for super hosts!
 
             Learn how Airbnb protects hosts</p>
         </div>
         <div>
-            <h1>Guests are verified</h1>
+            <h1 class="title">Guests are verified</h1>
             <p class="bio">Airbnb always requires guests to provide certain information before they can make a reservation—such as a confirmed phone number and email address. For added control, you can require guests to also provide recommendations from other hosts and a verified ID.Airbnb is adding identity verification so that users can feel more confident that hosts and travellers on the service are real people. Read a brief explanation of how Airbnb ID verification currently works and how the company plans to use ID verification to improve the platform for both guests and hosts.</p>
         </div>
     </section>
