--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,7 +33,7 @@
             <a href="#" class="nav">Product</a>
             <a href="#" class="nav">Solutions</a>
             <a href="#" class="nav">Resources</a>
-            <a href="/userdashboard" class="nav">My Account</a>
+            <a href="#" class="nav">Global</a>
        </div>
            <p>Live the wonderful life</p>
     </header> 
