--- a/views/userdashboard.handlebars
+++ b/views/userdashboard.handlebars
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{title}}</title>
   <body>
-      <h1>Arifa Khan</h1>
+      <h1>WELCOME TO AIRBNB Arifa Khan</h1>
     <section class="profile-dashboard">
     <div>
       <img src="../img/girl dashboard.jpg" alt="dashboard" class="profilephoto">
