--- a/views/userregistration.handlebars
+++ b/views/userregistration.handlebars
@@ -15,7 +15,7 @@
 
     <form action="/sendMessage" method="POST">
       <div class="container">
-          <h1>Sign Up</h1>
+          <h1 class="signup">Sign Up Here to Live Your Life</h1>
           <hr>
           <label><b>Name</b></label>
           <input type="text" placeholder="Enter Name" name="FirstName" id="FirstName">
