--- a/static/css/userregistration.css
+++ b/static/css/userregistration.css
@@ -9,7 +9,15 @@ body{
   text-align: justify;
   margin: 1rem;
 }
-
+.signup{
+  text-align: center;
+  color: black;
+  text-shadow: 1px 1px burlywood;
+}
+p{
+  margin-top: 0.2rem;
+  font-size: 1rem;
+}
 * {box-sizing: border-box}
 
 /* Full-width input fields */
@@ -54,6 +62,7 @@ button:hover {
 .cancelbtn, .signupbtn {
   float: left;
   width: 50%;
+  height: 4rem;
 }
 
 .container {
@@ -83,7 +92,8 @@ button:hover {
   .cancelbtn, .signupbtn {
     width: 100%;
     margin: 0.5em;
-    padding-bottom: 1.5em;
+    padding-bottom: 1.7em;
+    height: 2.5rem;
   }
   .statement{
     font-size: 1rem;
