--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,19 +23,14 @@
             <i class="fab fa-invision"></i>
         </div>
     </section>
-    <header class="head">  
-        <div>
-            <img src="../img/logo.png" class="logo">
-        </div> 
-        <div> 
+     <div> 
             <a href="/home" class="nav">Home </a>
-            <a href="/roomlisting" class="nav">Explore</a>
-            <a href="#" class="nav">Product</a>
+            <a href="/login" class="nav">Explore</a>
+            <a href="/admin" class="nav">Product</a>
             <a href="#" class="nav">Solutions</a>
             <a href="#" class="nav">Resources</a>
-            <a href="#" class="nav">Global</a>
+            <a href="/logout" class="nav">LogOut</a>
        </div>
-    </header> 
     
   <section>
     {{{body}}}
