--- a/views/userdashboard.handlebars
+++ b/views/userdashboard.handlebars
@@ -21,7 +21,7 @@
       <h4>Email : - <span>{{this.email}}</span></h4>
       <h4>Phone Number : - <span>{{this.phoneNo}}</span></h4>
     </div>
-    {{#each}}
+ 
    </section>
       <h5> Your Places</h5>   
       <section class="Places">
@@ -39,6 +39,6 @@
         </div>
       </section>
       <h1 class="name"> Thank You for Choosing AIRBNB</h1>
-  
+     {{/each}}
 </body>
 </html>
