--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -16,7 +16,7 @@
            <a href="/home" class="linklogout" >Logout</a>   
        </div>
        <div class="table">
-           <h2 class="hema">Welcome Hemangi</h2>
+           <h2 class="hema">Welcome Hemangi Likhia</h2>
     <form method="POST" class="adminform" action="/SenddataAdmin">
 
         <label class="l">Title</label>
@@ -35,7 +35,7 @@
          <input type="text" name="status" id="Price">
 
         <label class="l">Upload an image</label> 
-         <input type="file" name="image" id="image" class="uploadimage" >
+         <input type="file" name="image" id="image" class="uploadimage"><br><br>
 
          <button type="submit" class="task" id="task add" >Add Task </button>
        </form>
