--- a/views/adminedit.handlebars
+++ b/views/adminedit.handlebars
@@ -27,6 +27,7 @@
                 <th>Price</th>
                 <th>Room Location</th>
                 <th>Status</th>
+                <th>Operation</th>
         </thead>
         <tbody>
             {{#each admindata}}
