--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -9,7 +9,7 @@
  </header> 
     
     <main>
-         <form class="mainform"
+         <form class="mainform">
             <h4>Arrival Date</h4>
             <input type="datetime-local" placeholder="2019,May 5th" class="maininput">
             <h4>Departure Date</h4>
@@ -36,7 +36,7 @@
         </div> 
         <div class="information">
         <h1 class="info">Places to stay in Canada</h1>
-        <h5>4.5 out of 5stars with 7,00,0000+reviews</h5>
+        <h5 class="tile">4.5 out of 5stars with 7,00,0000+reviews</h5>
             <img src="/img/room1.jpeg" alt="Room-1" class="promoimg">
             <p class="bio">This was my second time stay at Emil's and it was a great experience this time too. The room was clean and bright, well appointed.Great customer service and well good experience.Reasonable and clean.</p>
             <img src="/img/boy.jpg" alt="boy" class="rating-view">  Matthew ,Canada
