--- a/static/css/login.css
+++ b/static/css/login.css
@@ -48,16 +48,26 @@ span.psw {
   float: left;
   padding-top: 16px;
 }
-@media screen and (max-width: 700px) {
+.footer-link{
+  visibility: hidden;
+  display: none;
+}
+@media screen and (min-width:300px) and (max-width: 700px) {
   input[type=text], input[type=password] {
     width: 100%;
     display: inline-block;
     border: none;
     background: #f1f1f1;
   } 
+  form {
+    margin-top: 2rem;
+    border: 2px solid #f1f1f1;
+    padding: 2rem;
+  }
   .container {
     width: 100%;
     margin-left: -2em;
+    margin-bottom: 2rem;
     /* padding: 16px; */
   } 
   .cancelbtn {
@@ -72,5 +82,11 @@ span.psw {
     width: 50%;
     margin: 0.2em;
 
+  }
+}
+@media screen and (max-width: 1400px) and (min-width: 700px){
+  .container {
+    width: 90%;
+    padding: 16px;
   }
 }
