--- a/static/css/logout.css
+++ b/static/css/logout.css
@@ -38,3 +38,33 @@ p{
     visibility: hidden;
     display: none;
 }
+@media screen and (min-width:300px) and (max-width: 700px){
+    .logoutlink{
+        width: 50%;
+        margin-left: 4.5rem;
+        text-decoration-line: none;
+        color: white;
+        font-size: 1.5rem;
+        border: 1px solid black;
+        padding: 1rem;
+        text-align: center;
+        margin-bottom : 2rem;
+        display: block;
+        background-color : #0372D3;
+    }
+}
+@media screen and (max-width: 1400px) and (min-width: 700px){
+    .logoutlink{
+        width: 50%;
+        margin-left: 10rem;
+        text-decoration-line: none;
+        color: white;
+        font-size: 1.5rem;
+        border: 1px solid black;
+        padding: 1rem;
+        text-align: center;
+        margin-bottom : 2rem;
+        display: block;
+        background-color : #0372D3;
+    }
+}
