--- a/static/css/roomlisting.css
+++ b/static/css/roomlisting.css
@@ -85,45 +85,7 @@ li{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
-/*responsive*/
-@media screen and (max-width: 1200px) {
-    
-    /*header*/
-
- i{
-    margin-top: 1rem;
-    padding-left: 0.2em;
-    font-size: 1rem;
-    padding-bottom: 2rem;
-    text-align: center;
- }
- /*footer*/
-a{
-    text-decoration-line: none;
-    color: black;
-    font-size: 1rem;
-    text-align: center;
-}
-li{
-    list-style-type: none;
-}
-.footer-link{
-    display: grid;
-    grid-template-columns: 1fr;
-}
-.image-display{
-    display: grid;
-    grid-template-columns: 1fr 1fr ;
- }
- img{
-    height: 20rem;
-    width: 30rem;
-    margin: auto ;
-    padding: auto;
-    display: block;
-}
-}
-@media screen and (min-width: 800px) and  (max-width:1800px) {
+@media screen and (max-width: 1400px) and (min-width: 700px) {
     i{
         margin-top: 1rem;
         padding-left: 1.5em;
@@ -131,13 +93,18 @@ li{
         padding-bottom: 2rem;
         text-align: center;
      }
+     h2{
+        color:#E98080;
+        text-align:left;
+        font-size:1rem;
+    }
      .image-display{
         display: grid;
-        grid-template-columns: 1fr ;
+        grid-template-columns: 1fr;
      }
      img{
-        height: 30rem;
-        width: 55rem;
+        height: 15rem;
+        width: 30rem;
         margin: auto ;
         padding: auto;
         display: block;
@@ -152,19 +119,51 @@ li{
         padding-right: 2rem;
      }
  }
-     @media screen and (min-width:300px) and (max-width: 600px) {
+     @media screen and (min-width:300px) and (max-width: 700px) {
         .nav{
-            margin-top:8rem;
-            margin-left: 5em;;
-            font-size: 2rem;
-            color:white;
-            text-decoration-line: none;
-            text-align: right;
+            display: inline;
+            font-size: 1rem;
+            margin-left: 1rem;
+            padding-left: 2rem;
+            font-weight: bold;
+        
+         }
+         .navigation{
+             visibility: hidden;
+             display: none;
+             margin-bottom: 1rem;
          }
          a{
             text-decoration-line: none;
             color: white;
             font-size: 1rem;
             text-align: center;
+        }
+        .image-display{
+            display: grid;
+            grid-template-columns: 1fr;
+         }
+         img{
+            height: 15rem;
+            width: 20rem;
+            margin: auto ;
+            padding: auto;
+            display: block;
+        }
+        .footer-link{
+            text-shadow: 2px 2px black;
+            margin-top: 1rem;
+            background-color: slategrey;
+            display: grid;
+            grid-template-columns: 1fr;
+        }
+        a{
+            text-decoration-line: none;
+            color: wheat;
+            font-size: 1.2rem;
+           
+        }
+        li{
+            margin-top: 1rem;
         }
      }
