--- a/static/css/userregistration.css
+++ b/static/css/userregistration.css
@@ -77,23 +77,29 @@ button:hover {
 }
 
 /* Change styles for cancel button and signup button on extra small screens */
-@media screen and (max-width: 700px) {
+@media screen and (min-width:300px) and (max-width: 700px) {
   input[type=text], input[type=password] {
-    width: 100%;
+    width: 95%;
     display: inline-block;
     border: none;
     background: #f1f1f1;
   } 
+  .signup{
+    font-size: 1rem;
+    text-align: center;
+    color: black;
+    text-shadow: 1px 1px burlywood;
+  }
   .container {
     width: 100%;
-    margin-left: -2em;
+    margin-left: 1em;
     /* padding: 16px; */
   } 
   .cancelbtn, .signupbtn {
-    width: 100%;
-    margin: 0.5em;
+    width: 70%;
     padding-bottom: 1.7em;
     height: 2.5rem;
+    margin-left: 2.4rem;
   }
   .statement{
     font-size: 1rem;
