--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,6 +30,7 @@
             {{else}}
             <a href="/userregistration" class="nav">Join</a>
             <a href="/login" class="nav">Login</a>
+            <a href="/logout" class="nav">LogOut</a>
             {{/if}}
             
        </div>
